--- a/oClock.MVC/Views/Home/Index.cshtml
+++ b/oClock.MVC/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container text-center">
+    <svg class="my-4 bi bi-clock" xmlns="http://www.w3.org/2000/svg" width="150" height="150" fill="currentColor"  viewBox="0 0 16 16">
+        <path d="M8 3.5a.5.5 0 0 1 .5.5v4h3a.5.5 0 0 1 0 1h-3.5a.5.5 0 0 1-.5-.5v-4a.5.5 0 0 1 .5-.5z"/>
+        <path d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
+    </svg>
+    <h1 class="display-4">oClock</h1>
+    <p class="lead">Analyze and visualize JIRA worklog data effortlessly.</p>
 </div>
