--- a/oClock.MVC/Views/Shared/_Layout.cshtml
+++ b/oClock.MVC/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Worklog" asp-action="Index">Worklog</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +38,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2024 - oClock.MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2024 - oClock.MVC
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
